2006-09-26  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/ruby: Add new ruby interface -- probably needs to be
	moved to allow compilation into main libopenbabel.

	* scripts/*: Updated for above changes.

2006-09-25  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/base.h, src/atom.h, src/bond.h: Update internal atom
	indexing to use an unsigned int, rather than short. Fixes
	PR#1556819, caused by large molecules (i.e. >2^16 atoms or bonds).

	* src/newlinebuf.h, src/newlinebuf.cpp: Fix bugs uncovered during
	ChemSpotlight testing. Now appears to smoothly handle old Mac OS
	9, DOS, and Unix line endings with no problems.

	* src/generic.h, src/generic.cpp: Incorporate patches from Carsten
	for lattice type and space groups.

	* src/formats/chemdrawcdx.[h, cpp]: New format code for ChemDraw
	CDX binary code, contributed by Fredrik Wallner.

	* src/formats/Makefile.am, src/formats/Makefile.in: Update for
	above.

	* tools/obgen.cpp, tools/Makefile.am: New "obgen" tool for
	creating simple 3D coordinates for SMILES and other 0D
	formats. Contributed by Tim Vandermeersch.

2006-08-30  Donald E. Curtis <dcurtis3@sourceforge.net>

	* src/mol.cpp: Added OBMol::CreateResidue() function.

2006-08-08  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/inchi/: Update InChI library with final release of
	1.0.1. Need to update configure script to detect libinchi version
	to only build newer revisions when needed.

2006-08-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp (ParseComplex): Ensure complex
	expressions end in a ']' character. Added patch from Nick England
	for handling chiral output using OBChiralData. Should fix
	PR#1508741.

	* test/files/invalid-smarts.txt: Add additional complex expression
	for tests.

	* src/generic.cpp (OBUnitCell): Update lattice detection to use
	IsApprox instead of IsNear.

	* src/mol.cpp (PerceiveBondOrders): Ditto.

2006-08-04 Chris Morley <ob@gaseq.co.uk>
	